--- a/contents-api/build.gradle
+++ b/contents-api/build.gradle
@@ -14,6 +14,9 @@ bootJar {
         into 'BOOT-INF/classes/static/docs'
     }
 }
+jar {
+    enabled = false
+}
 
 
 test{
@@ -27,6 +30,7 @@ dependencies {
 
     implementation('org.springframework.boot:spring-boot-starter-web')
     implementation('org.springframework.boot:spring-boot-starter-thymeleaf')
+    implementation("org.springframework.boot:spring-boot-configuration-processor")
 }
 
 test {
