1. GKE Ingress 용 헬스체커 추가 2. Prod local 분리

--- a/contents-api/src/main/resources/application-prod.yml
+++ b/contents-api/src/main/resources/application-prod.yml
@@ -22,3 +22,7 @@ spring:
   h2:
     console:
       enabled: false
+server-address:
+  geoServerAddress : http://coguri.shop/geometry
+  contentsServerAddress : http://coguri.shop/contents
+  authServerAddress : http://coguri.shop/auth
