--- a/auth-api/src/main/resources/application-local.yml
+++ b/auth-api/src/main/resources/application-local.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     hikari: #https://github.com/brettwooldridge/HikariCP#configuration-knobs-baby
-      jdbcUrl: jdbc:mysql://34.64.133.74:3306/pinstagram?useUnicode=true&characterEncoding=utf8
+      jdbcUrl: jdbc:mysql://localhost:3306/pinstagram?useUnicode=true&characterEncoding=utf8
       username: pinstagram
       password: test1234
       driver-class-name: com.mysql.jdbc.Driver
