1. 지오 코딩 추가

--- a/geo-api/src/main/resources/application.yml
+++ b/geo-api/src/main/resources/application.yml
@@ -24,3 +24,4 @@ logging:
         type: trace
 
 googleApiKey: AIzaSyD52V6H98iYDJ-p5_Np7f37aNnTt13kKtg
+kakaoApiKey: 8d39467879a51b1cfd18613970929af4
