--- a/geo-api/build.gradle
+++ b/geo-api/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     implementation project(path: ":api-common", configuration: 'default')
     implementation project(path: ":domain-common", configuration: 'default')
 
+    implementation 'com.google.code.gson:gson:2.8.7'
     implementation('org.springframework.boot:spring-boot-starter-web')
     implementation('org.springframework.boot:spring-boot-starter-thymeleaf')
     implementation("org.springframework.boot:spring-boot-configuration-processor")
