--- a/contents-api/src/main/resources/application-prod.yml
+++ b/contents-api/src/main/resources/application-prod.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
-    hikari: #https://github.com/brettwooldridge/HikariCP#configuration-knobs-baby
-      jdbcUrl: jdbc:mysql://34.64.133.74:3306/pinstagram?useUnicode=true&characterEncoding=utf8
+    hikari:
+      jdbcUrl: jdbc:mysql://10.69.224.3:3306/pinstagram?useUnicode=true&characterEncoding=utf8
       username: pinstagram
       password: test1234
       driver-class-name: com.mysql.jdbc.Driver
