DNS 서버 반영에 따른 서버 주소 변경

--- a/contents-api/src/main/resources/application-prod.yml
+++ b/contents-api/src/main/resources/application-prod.yml
@@ -23,6 +23,6 @@ spring:
     console:
       enabled: false
 server-address:
-  geoServerAddress : http://coguri.shop/geometry
-  contentsServerAddress : http://coguri.shop/contents
-  authServerAddress : http://coguri.shop/auth
+  geoServerAddress : https://coguri.shop/geometry
+  contentsServerAddress : https://coguri.shop/contents
+  authServerAddress : https://coguri.shop/auth
